infra/k8s-development/ingress-dev-srv.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: proxy_set_header X-Script-Name /db;
  rules:
    - host: local-dev.ryan-schachte.com
      http:
        paths:
          - path: /db
            backend:
              serviceName: pgadmin
              servicePort: 3000
          - path: /
            backend:
              serviceName: client-srv
              servicePort: 4000
